*SVN*

* Quote table names. Defaults to column quoting.  #4593 [Justin Lynn, gwcoffey, eadz, Dmitry V. Sabanin, Jeremy Kemper]

* Alias association #build to #new so it behaves predictably.  #8787 [lifofifo]

* Add notes to documentation regarding attr_readonly behavior with counter caches and polymorphic associations.  Closes #9835 [saimonmoore, rick]

* Observers can observe model names as symbols properly now.  Closes #9869  [queso]

* find_and_(initialize|create)_by methods can now properly initialize protected attributes [Tobias Luetke]

* belongs_to infers the foreign key from the association name instead of from the class name.  [Jeremy Kemper]

* PostgreSQL: support multiline default values.  #7533 [Carl Lerche, aguynamedryan, Rein Henrichs, Tarmo Tänav]

* MySQL: fix change_column on not-null columns that don't accept dfeault values of ''.  #6663 [Jonathan Viney, Tarmo Tänav]

* validates_uniqueness_of behaves well with single-table inheritance.  #3833 [Gabriel Gironda, rramdas, François Beausoleil, Josh Peek, Tarmo Tänav]

* Raise ProtectedAttributeAssignmentError in development and test environments when mass-assigning to an attr_protected attribute.  #9802 [Henrik N]

* Speedup database date/time parsing.  [Jeremy Kemper, Tarmo Tänav]

* Fix calling .clear on a has_many :dependent=>:delete_all association. [tarmo]

* Allow change_column to set NOT NULL in the PostgreSQL adapter [tarmo]

* Fix that ActiveRecord would create attribute methods and override custom attribute getters if the method is also defined in Kernel.methods. [Rick]

* Don't call attr_readonly on polymorphic belongs_to associations, in case it matches the name of some other non-ActiveRecord class/module.  [Rick]

* Try loading activerecord-<adaptername>-adapter gem before trying a plain require so you can use custom gems for the bundled adapters. Also stops gems from requiring an adapter from an old Active Record gem.  [Jeremy Kemper, Derrick Spell]

