@@ -33,13 +33,13 @@ class Author < ActiveRecord::Base
            :before_remove => :log_before_removing,
            :after_remove  => :log_after_removing
   has_many :posts_with_proc_callbacks, :class_name => "Post",
-           :before_add    => Proc.new {|o, r| o.post_log << "before_adding#{r.id}"},
-           :after_add     => Proc.new {|o, r| o.post_log << "after_adding#{r.id}"},
+           :before_add    => Proc.new {|o, r| o.post_log << "before_adding#{r.id || '<new>'}"},
+           :after_add     => Proc.new {|o, r| o.post_log << "after_adding#{r.id || '<new>'}"},
            :before_remove => Proc.new {|o, r| o.post_log << "before_removing#{r.id}"},
            :after_remove  => Proc.new {|o, r| o.post_log << "after_removing#{r.id}"}
   has_many :posts_with_multiple_callbacks, :class_name => "Post",
-           :before_add => [:log_before_adding, Proc.new {|o, r| o.post_log << "before_adding_proc#{r.id}"}],
-           :after_add  => [:log_after_adding,  Proc.new {|o, r| o.post_log << "after_adding_proc#{r.id}"}]
+           :before_add => [:log_before_adding, Proc.new {|o, r| o.post_log << "before_adding_proc#{r.id || '<new>'}"}],
+           :after_add  => [:log_after_adding,  Proc.new {|o, r| o.post_log << "after_adding_proc#{r.id || '<new>'}"}]
   has_many :unchangable_posts, :class_name => "Post", :before_add => :raise_exception, :after_add => :log_after_adding
 
   has_many :categorizations
@@ -74,7 +74,7 @@ class Author < ActiveRecord::Base
 
   private
     def log_before_adding(object)
-      @post_log << "before_adding#{object.id}"
+      @post_log << "before_adding#{object.id || '<new>'}"
     end
 
     def log_after_adding(object)
