@@ -1,5 +1,7 @@
 *SVN*
 
+* Refactor association create and build so before & after callbacks behave consistently.  #8854 [lifofifo, mortent]
+
 * Quote table names. Defaults to column quoting.  #4593 [Justin Lynn, gwcoffey, eadz, Dmitry V. Sabanin, Jeremy Kemper]
 
 * Alias association #build to #new so it behaves predictably.  #8787 [lifofifo]
